added multiclick for single animals